cabal-version:       >=1.10
name:                thread-barrier
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Control.Concurrent.Barrier
  build-depends:       base >=4.12 && <4.15
  default-language:    Haskell2010
